--- a/Cabelo-Software/Cabelo-Software.csproj
+++ b/Cabelo-Software/Cabelo-Software.csproj
@@ -10,13 +10,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Controller\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Guna.UI2.WinForms" Version="2.0.4.4" />
     <PackageReference Include="Npgsql" Version="7.0.2" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.3" />
+    <PackageReference Include="Oracle.ManagedDataAccess" Version="21.10.0" />
   </ItemGroup>
 
   <ItemGroup>
